--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -284,7 +284,7 @@ header {
   text-align: center;
   color: white;
   width: 370px;
-  hight: 100%;
+  height: 100%;
   box-sizing: border-box;
   /* border: 1px solid yellow; */
   margin: auto;
