--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,7 +34,8 @@
   } */
 
   .btn-primary {
-    @apply text-white bg-purple-600 py-2 px-4 rounded shadow-md hover:bg-purple-700 active:bg-purple-800 transition-colors;
+    @apply text-white py-2 px-4 rounded shadow-md transition-colors;
+    background-color: #5bbb64;
   }
 
   .btn-secondary {
