--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -237,7 +237,7 @@ header {
 
 /* ------------------------------------ section */
 .banner {
-  height: 80vh;
+  /* height: 80vh; */
   width: 100vw;
   box-sizing: border-box;
   margin-bottom: 40px;
@@ -1082,13 +1082,6 @@ swiper-slide {
   background-position: center;
 }
 
-.mySwiper {
-  height: 55px;
-  /* width: 80%; */
-  width: 363px;
-  margin-top: 5px;
-}
-
 .mySwiper2 {
   width: 363px;
 
@@ -1099,7 +1092,7 @@ swiper-slide {
 
 .mySwiper2 swiper-slide {
   width: 25%;
-  height: 10%;
+  height: 100%;
   opacity: 0.4;
 }
 
