--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -1128,3 +1128,180 @@ swiper-slide img {
   height: 10%;
   object-fit: cover;
 }
+
+// dropdown
+.link {
+  background: none;
+  border: none;
+  text-decoration: none;
+  color: #777;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  padding: 0;
+}
+
+.dropdown.active > .link,
+.link:hover {
+  color: #5bbb64;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-menu {
+  position: absolute;
+  left: 0;
+  top: calc(100% + 0.25rem);
+  background-color: white;
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-10px);
+  transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.dropdown.active > .link + .dropdown-menu {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+.information-grid {
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  gap: 2rem;
+  background-color: #32322f;
+}
+
+.dropdown-links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.login-form > input {
+  margin-bottom: 0.5rem;
+}
+
+/* /////////////////////////////// checkout summary */
+.subbut {
+  background: #0066a2;
+  color: white;
+  border-style: outset;
+  border-color: #0066a2;
+  height: 37px;
+  width: 110px;
+  font: bold15px arial, sans-serif;
+  text-shadow: none;
+}
+
+.subbut:hover {
+  color: #5bbb64;
+}
+
+.payoption {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  border: solid;
+  border-color: #e1dad1;
+  padding: 5%;
+}
+
+.qrform {
+  height: 37px;
+}
+
+/* ////////////////////////////// dropdown 2 */
+
+.navbar {
+  height: 46px;
+  background-color: #32322f;
+}
+
+/* .navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+} */
+
+.dropdown {
+  float: left;
+  position: relative;
+  margin-top: 10px;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  /* background-color: red; */
+  color: #5bbb64;
+}
+
+.dropdown-one {
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  color: #e1dad1;
+  background-color: #32322f;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-two {
+  cursor: pointer;
+  display: none;
+  position: absolute;
+  left: 160px;
+  top: 0px;
+  min-width: 160px;
+  min-height: 300px;
+  background-color: #32322f;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown:hover .dropdown-one,
+#link1:hover > .dropdown-two {
+  display: block;
+}
+
+.dropdown-one .dItem {
+  color: #e1dad1;
+  padding: 12px 16px;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-one .dItem:hover,
+.dropdown-two a:hover {
+  background-color: #5bbb64;
+  color: #e1dad1;
+}
+
+.container {
+  max-width: 800px;
+  height: 800px;
+  background-color: white;
+  margin: 10px auto 0 auto;
+}
+
+.drop1 {
+  margin: 0;
+}
