--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -57,6 +57,11 @@ h5 {
   text-align: center;
   color: #e1dad1;
 }
+.pagehead2 {
+  padding: 40px 0 10px 0;
+  text-align: center;
+  color: #e1dad1;
+}
 
 p {
   margin: 0 20px;
