--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -329,7 +329,8 @@ header {
 .pccoll {
   text-align: center;
   color: white;
-  width: 370px;
+  /* width: 370px; */
+  width: 100%;
   /* height: 100%; */
   box-sizing: border-box;
   /* border: 1px solid yellow; */
