--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -227,7 +227,16 @@ header {
 }
 
 .spacebox1 {
-  width: 25%;
+  /* width: 25%; */
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
 }
 
 .nav.div {
@@ -245,6 +254,7 @@ header {
   /* margin-top: 12px; */
   object-fit: contain;
   max-height: 50px;
+  margin: auto;
 }
 
 .mainlogo2 {
@@ -329,13 +339,13 @@ header {
 .pccoll {
   text-align: center;
   color: white;
-  /* width: 370px; */
   width: 100%;
   /* height: 100%; */
   box-sizing: border-box;
   /* border: 1px solid yellow; */
   margin: auto;
   margin-bottom: 80px;
+  /* padding: 5%; */
 }
 
 .pccollc {
@@ -1099,7 +1109,7 @@ swiper-pagination {
 }
 
 .calcol {
-  width: 20vw;
+  width: 10vw;
   border-style: solid;
   align-items: start;
   padding: 3px;
@@ -1355,12 +1365,13 @@ swiper-slide img {
   cursor: pointer;
   display: none;
   position: absolute;
-  left: 160px;
+  left: 120px;
   top: 0px;
   min-width: 160px;
   min-height: 300px;
   background-color: #32322f;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .dropdown:hover .dropdown-one,
