--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -153,7 +153,7 @@ p {
   display: grid;
   /* grid-template-columns: 1fr 1fr; */
   margin-bottom: 8px;
-  /* width: 20vw; */
+  width: 100%;
 }
 
 .card2 img {
@@ -342,6 +342,7 @@ header {
   text-align: center;
   color: white;
   width: 100%;
+  width: 375px;
   /* height: 100%; */
   box-sizing: border-box;
   /* border: 1px solid yellow; */
@@ -433,7 +434,6 @@ header {
   grid-template-columns: repeat(auto-fill, 180px);
   gap: 10px;
   margin: auto;
-  /* padding: auto; */
   margin-bottom: 30px;
 }
 
@@ -989,7 +989,7 @@ tr {
 }
 
 .pimage {
-  width: 100%;
+  /* width: 90%; */
   /* height: 120px; */
   margin: 0;
 }
@@ -1493,85 +1493,6 @@ swiper-slide {
   width: 700px;
   height: 90vh;
   object-fit: cover;
-}
-@media only screen and (min-width: 376px) {
-  .pccoll {
-    /* margin: auto; */
-    /* padding: 0 5%; */
-  }
-}
-
-@media screen and (min-width: 700px) {
-  .banner {
-    width: 70vw;
-  }
-  .pccollc {
-    width: 50%;
-  }
-
-  .productview {
-    width: 80%;
-  }
-
-  .swiper-container {
-    /* margin-left: 0; */
-    margin-right: auto;
-  }
-
-  .myswiper2 {
-    width: 500px;
-    height: 350px;
-  }
-
-  .thumbSwiper {
-    width: 500px;
-    height: 80px;
-  }
-
-  .pgallpic {
-    height: 350px;
-    padding: 1% 0;
-    margin: auto;
-  }
-
-  .pgallpicthumb {
-    /* width: 363px; */
-    height: 80px;
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1300px) {
-  .banner {
-    width: 700px;
-  }
-  .swiper {
-    /* height: 29%; */
-    margin-left: 0;
-    margin-right: auto;
-  }
-  .myswiper2 {
-    width: 625px;
-    height: 500px;
-  }
-  .productview {
-    display: flex;
-    width: 1000px;
-    margin: auto;
-  }
-  .gallerycol {
-    width: 100%;
-  }
-
-  .pdetails2 {
-    padding: 30px;
-  }
-
-  .pgallpic {
-    height: 500px;
-    padding: 1% 0;
-    margin: auto;
-  }
 }
 
 /* --------------------------------------------------  Product view*/
