--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -501,6 +501,7 @@ header {
   box-sizing: border-box;
   /* border: 1px solid yellow; */
   margin: auto;
+  margin-bottom: 60px;
 }
 
 .gridShopcoll {
