--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -77,6 +77,7 @@ p {
 .undertext {
   margin: -5px 0px 0px 0px;
   font-size: 12px;
+  color: white;
 }
 
 .tleft {
@@ -1630,3 +1631,25 @@ ul.thumb li .thumbnail-wrap.hover {
   margin: 10px;
   cursor: pointer;
 }
+
+//////////////////////// undertext
+
+.p_utext > td {
+  margin: 0;
+  color: white;
+  padding: 0;
+  text-align: right;
+}
+
+.ut_price {
+  margin-right: -110px;
+  /* align: right; */
+}
+
+.spprice {
+  /* width: 30px; */
+  color: red;
+  /* margin-top: 5px; */
+  font-weight: bold;
+}
+/* ////////// test */
