--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -1400,6 +1400,7 @@ swiper-slide {
   color: #e1dad1;
   background-color: #32322f;
   min-width: 160px;
+  /* min-height: 400px; */
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -1411,6 +1412,7 @@ swiper-slide {
   top: 0px;
   min-width: 160px;
   max-height: 600px;
+  min-height: 350px;
   background-color: #32322f;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
