--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -77,6 +77,11 @@
 }
 
 @media only screen and (min-width: 900px) {
+  .pccollc {
+    width: 45%;
+    /* width: 65%; */
+  }
+
   .shopcat {
     width: 900px;
   }
