--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -1661,3 +1661,11 @@ ul.thumb li .thumbnail-wrap.hover {
   margin-top: 10%;
   text-align: center;
 }
+
+.oos {
+  background-color: red;
+  color: white;
+  width: 90%;
+  text-align: center;
+  margin: 0;
+}
