--- a/resources/css/style3.css
+++ b/resources/css/style3.css
@@ -549,13 +549,14 @@ header {
   color: black;
   background-color: #32322f;
 
-  /* width: 100%; */
-  width: 375px;
+  width: 100%;
+  /* width: 375px; */
   box-sizing: border-box;
   /* border: 1px solid yellow; */
   margin: auto;
   padding: 10px 0px;
   margin-bottom: 50px;
+  /* overflow: hidden; */
 }
 
 .shopcat h4 {
@@ -591,7 +592,7 @@ header {
 
 .SCat img {
   opacity: 0.5;
-  width: 116px;
+  max-width: 116px;
   height: 49px;
   object-fit: cover;
   z-index: 1;
